# crypto-rust

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  lib.rs  main.rs
tests/: crypto_test.rs
