[package]
name = "crypto-service-rust"
version = "0.1.0"
authors = ["Aram Zamora <aram.zamora@gmail.com>"]

[lib]
# The name of a target is the name of the library that will be generated. This
# is defaulted to the name of the package or project, with any dashes replaced
# with underscores. (Rust `extern crate` declarations reference this name;
# therefore the value must be a valid Rust identifier to be usable.)
name = "crypto_service"
path = "src/lib.rs"

[dependencies]
openssl = "0.9.24"
hex = "0.3.1"
otpauth = "0.2.7"
time = "0.1.40"
